<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="sections">
        <item>FarmaFriend</item>
        <item>@string/Contactos</item>
        <item>@string/Medicamentos</item>
        <item>@string/Medicos</item>
        <item>@string/SolCita</item>
        <item>@string/CitasMed</item>
        <item>@string/farmacias</item>
    </string-array>
    <string-array name="section_titles">
        <item>Inicio</item>
        <item>FarmaFriend</item>
        <item>@string/Contactos</item>
        <item>@string/Medicamentos</item>
        <item>@string/Medicos</item>
        <item>@string/SolCita</item>
        <item>@string/CitasMed</item>
        <item>@string/farmacias</item>
    </string-array>
    <string-array name="sections_icons">
        <item>@drawable/princ</item>
        <item>@drawable/personal</item>
        <item>@drawable/capsule</item>
        <item>@drawable/doctor</item>
        <item>@drawable/doctoranadir</item>
        <item>@drawable/schedule1</item>
        <item>@drawable/farmacia</item>
    </string-array>

    <string name="app_name">FarmaFriend</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="Agenda">Contacts</string>
    <string name="Medicamentos">Medicines</string>
    <string name="Medicos">Doctors</string>
    <string name="SolCita">Make an appointment</string>
    <string name="CitasMed">Doctor appointments</string>
    <string name="Contactos">Contacts</string>
    <string name="IntrComun">Search by region</string>
    <string name="SelecComunidad">Choose a region</string>
    <string name="Doctor">Doctor</string>
    <string name="Descripcion">Description</string>
    <string name="Fecha">Date</string>
    <string name="AñCit">Add appointment</string>
    <string name="ElegDoctor">Choose a doctor</string>
    <string name="Nombre">Name</string>
    <string name="Especialidad">Specialization (*)</string>
    <string name="Dirección">Address</string>
    <string name="AñadirMedico">Add doctor</string>
    <string name="CuantasQuedan">How many pills left?</string>
    <string name="AñMedicina">Add medicine</string>
    <string name="Telefono">Phone</string>
    <string name="NombreMedicamento">Medicine name (*)</string>
    <string name="EligeMedicamento">--Choose a medicine--</string>
    <string name="FechaIni">Starting date</string>
    <string name="FechaFin">End date</string>
    <string name="hORAiNI">Starting hour</string>
    <string name="Cantidadtoma">Intake amount</string>
    <string name="Cadacuanto">Time interval</string>
    <string name="AñadRecord">Add reminder</string>
    <string name="ConfigAvanzada">Advanced config</string>
    <string name="Recordatorios">Reminders</string>
    <string name="Hora">Hour</string>
    <string name="añcontac">Add contact</string>
    <string name="EdCita">Edit appointment</string>
    <string name="EdContacto">Edit contact</string>
    <string name="EdRecordatorio">Edit reminder</string>
    <string name="EditMedico">Edit doctor</string>
    <string name="EditMedicamento">Edit medicine</string>
    <string name="title_activity_mapa_far">Map</string>

    <string name="farmacias">farmacias</string>
    <string name="farmacia" translatable="false">farmacias</string>

    <string name="Añadido">Added succesfully!</string>
    <string name="Citas">Appointments</string>
    <string name="Borrado">Deleted succesfully</string>
    <string name="Editado">Edited succesfully!</string>
    <string name="Error">Error: Empty field</string>
    <string name="ErrorMed">ErrorMed</string>
    <string name="ErrorRepe">Ya existe un elemento similar</string>
    <string name="ErrorAnt">Fecha anterior</string>
    <string name="Anadido">Added succesfully!</string>
    <string name="Tomar">Take</string>
    <string name="Parar">Stop</string>
    <string name="Menosde3">You have less than 3 pills remaining!</string>
    <string name="Cada">Every</string>


</resources>
