<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombreMedicamento"
        android:id="@+id/LnomMedi"
        android:textSize="40px" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TbnomMedi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FechaIni"
        android:id="@+id/LfechaIni"
        android:textSize="40px" />

    <EditText
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/TbfechaIni" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FechaFin"
        android:id="@+id/Lfechafin"
        android:textSize="40px" />

    <EditText
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/Tbfechafin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cantidadtoma"
        android:id="@+id/LCantidad"
        android:textSize="40px" />

    <EditText
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:inputType="none|numberDecimal"
        android:ems="10"
        android:id="@+id/tbCantidad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cadacuanto"
        android:id="@+id/LTiempo"
        android:textSize="40px" />

    <EditText
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tbTiempo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EdRecordatorio"
        android:id="@+id/btEditar" />

</LinearLayout>